--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-tooltip": "^5.28.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
