--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@supabase/supabase-js": "^2.39.3",
     "@uiw/react-md-editor": "^4.0.3",
     "chart.js": "^4.4.1",
-    "firebase": "^10.7.1",
-    "firebase-storage": "^1.0.0",
     "project_library": "file:",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
